// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component split-view renders correctly when no selectedClass 1`] = `
<div
  className="split-view columns"
>
  <div
    className="view column is-2"
    key="leftChild"
  >
    <Connect(ClassList) />
  </div>
  <div
    className="view column"
    key="rightChild"
  >
    <Connect(Component) />
  </div>
</div>
`;

exports[`component split-view renders correctly when selectedClass is given 1`] = `
<div
  className="split-view columns"
>
  <div
    className="view column is-2"
    key="leftChild"
  >
    <Connect(ClassList) />
  </div>
  <div
    className="view column is-half"
    key="midChild"
  >
    <Connect(ClassEditor)
      loadGraphSchemaContent={[Function]}
    />
  </div>
  <div
    className="view column"
    key="rightChild"
  >
    <Connect(Component) />
  </div>
</div>
`;
